samples/_failures_safe/1761438849_5e0ff8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c7f610f.c: In function ‘main’:
./samples/SAFE/__tmp_9c7f610f.c:191:20: error: missing terminating " character
  191 |             printf("Error
      |                    ^~~~~~
./samples/SAFE/__tmp_9c7f610f.c:191:13: error: expected expression at end of input
  191 |             printf("Error
      |             ^~~~~~
./samples/SAFE/__tmp_9c7f610f.c:191:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9c7f610f.c:191:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9c7f610f.c:191:13: error: expected declaration or statement at end of input
